--- a/package.json
+++ b/package.json
@@ -11,15 +11,15 @@
   "dependencies": {
     "axios": "^1.7.9",
     "lucide-react": "^0.474.0",
-    "next": "15.1.6",
+    "next": "^15.2.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "sass": "^1.83.4"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^19",
+    "@types/node": "^22.13.10",
+    "@types/react": "^19.0.10",
     "@types/react-dom": "^19",
-    "typescript": "^5"
+    "typescript": "^5.8.2"
   }
 }
